// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal disappears correctly after dismissing 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNGestureHandlerButton
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    exclusive={true}
    handlerTag={5}
    handlerType="NativeViewGestureHandler"
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "padding": 32,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    touchSoundDisabled={false}
  >
    <View
      accessible={true}
      collapsable={false}
      style={{}}
    />
  </RNGestureHandlerButton>
  <RCTScrollView
    collapsable={false}
    handlerTag={6}
    handlerType="NativeViewGestureHandler"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      {
        "backgroundColor": "rgb(242, 242, 242)",
        "borderRadius": 8,
        "margin": 32,
        "padding": 32,
      }
    }
    waitFor={
      [
        {
          "current": null,
        },
      ]
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#000",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            }
          }
        >
          Title
        </Text>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="modal-header-close"
        >
          <View>
            {"name":"ios-close","size":25,"color":"#000"}
          </View>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "marginBottom": 16,
            "textAlign": "left",
          }
        }
      >
        Description
      </Text>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="confirm-modal-confirm"
      >
        <View
          style={
            [
              {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 8,
                "borderWidth": 1,
                "padding": 8,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "textAlign": "center",
                },
                {
                  "color": "#fff",
                },
              ]
            }
          >
            Confirm
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`ConfirmModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNGestureHandlerButton
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    exclusive={true}
    handlerTag={1}
    handlerType="NativeViewGestureHandler"
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "padding": 32,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    touchSoundDisabled={false}
  >
    <View
      accessible={true}
      collapsable={false}
      style={{}}
    />
  </RNGestureHandlerButton>
  <RCTScrollView
    collapsable={false}
    handlerTag={2}
    handlerType="NativeViewGestureHandler"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      {
        "backgroundColor": "rgb(242, 242, 242)",
        "borderRadius": 8,
        "margin": 32,
        "padding": 32,
      }
    }
    waitFor={
      [
        {
          "current": null,
        },
      ]
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#000",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            }
          }
        >
          Title
        </Text>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="modal-header-close"
        >
          <View>
            {"name":"ios-close","size":25,"color":"#000"}
          </View>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "marginBottom": 16,
            "textAlign": "left",
          }
        }
      >
        Description
      </Text>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="confirm-modal-confirm"
      >
        <View
          style={
            [
              {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 8,
                "borderWidth": 1,
                "padding": 8,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "textAlign": "center",
                },
                {
                  "color": "#fff",
                },
              ]
            }
          >
            Confirm
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`ConfirmModal renders correctly with text input 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNGestureHandlerButton
    collapsable={false}
    delayLongPress={600}
    enabled={true}
    exclusive={true}
    handlerTag={3}
    handlerType="NativeViewGestureHandler"
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
    style={
      {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "padding": 32,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    touchSoundDisabled={false}
  >
    <View
      accessible={true}
      collapsable={false}
      style={{}}
    />
  </RNGestureHandlerButton>
  <RCTScrollView
    collapsable={false}
    handlerTag={4}
    handlerType="NativeViewGestureHandler"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      {
        "backgroundColor": "rgb(242, 242, 242)",
        "borderRadius": 8,
        "margin": 32,
        "padding": 32,
      }
    }
    waitFor={
      [
        {
          "current": null,
        },
      ]
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View />
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#000",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            }
          }
        >
          Title
        </Text>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="modal-header-close"
        >
          <View>
            {"name":"ios-close","size":25,"color":"#000"}
          </View>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "marginBottom": 16,
            "textAlign": "left",
          }
        }
      >
        Description
      </Text>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <TextInput
          editable={true}
          onChangeText={[Function]}
          placeholder=""
          placeholderTextColor="#8E8E8E"
          style={
            [
              {
                "color": "#000",
                "fontSize": 20,
                "lineHeight": 26,
                "marginBottom": 16,
                "textAlign": "left",
              },
              {
                "backgroundColor": "#fff",
                "borderColor": "#fff",
                "borderRadius": 8,
                "borderWidth": 1,
                "flex": 1,
                "padding": 8,
                "width": 50,
              },
            ]
          }
          testID="confirm-modal-input"
          value=""
        />
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
        testID="confirm-modal-confirm"
      >
        <View
          style={
            [
              {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 8,
                "borderWidth": 1,
                "padding": 8,
              },
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#000",
                  "fontSize": 20,
                  "lineHeight": 26,
                  "textAlign": "left",
                },
                {
                  "textAlign": "center",
                },
                {
                  "color": "#fff",
                },
              ]
            }
          >
            Confirm
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</Modal>
`;
